; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-handle-prelist-escape.c_test_handle_scope_val.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-handle-prelist-escape.c_test_handle_scope_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JERRY_GC_PRESSURE_LOW = common dso_local global i32 0, align 4
@native_free_cb_call_count = common dso_local global i32 0, align 4
@handle_count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_handle_scope_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_handle_scope_val() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @jerryx_open_handle_scope(i32* %1)
  %4 = call i32 (...) @create_object()
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @JERRY_GC_PRESSURE_LOW, align 4
  %7 = call i32 @jerry_gc(i32 %6)
  %8 = load i32, i32* @native_free_cb_call_count, align 4
  %9 = load i32, i32* @handle_count, align 4
  %10 = sub nsw i32 %9, 1
  %11 = icmp eq i32 %8, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @TEST_ASSERT(i32 %12)
  %14 = load i32, i32* %1, align 4
  %15 = call i32 @jerryx_close_handle_scope(i32 %14)
  ret void
}

declare dso_local i32 @jerryx_open_handle_scope(i32*) #1

declare dso_local i32 @create_object(...) #1

declare dso_local i32 @jerry_gc(i32) #1

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @jerryx_close_handle_scope(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
